myapp/templates/np/np-planner-rabbitmq.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planner-to-rabbitmq
spec:
  podSelector:
    matchLabels:
      app: planner
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: rabbitmq
      ports:
      - port: 5672
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-from-planner
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: planner
      ports:
      - protocol: TCP
        port: 5672
