myapp/templates/np/np-planner-weather.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planner-to-weather
spec:
  podSelector:
    matchLabels:
      app: planner
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: weatherservice
      ports:
      - port: 9090
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wather-from-planner
spec:
  podSelector:
    matchLabels:
      app: weatherservice
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: planner
      ports:
      - protocol: TCP
        port: 9090
