myapp/templates/np/np-server-internet.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: server-external-ingress
spec:
  podSelector:
    matchLabels:
      app: serverservice
  ingress:
    - from: []
      ports:
      - protocol: TCP
        port: 8080
