myapp/templates/np/np-server-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: server-to-mysql
spec:
  podSelector:
    matchLabels:
      app: serverservice
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: mysql
      ports:
      - port: 3306
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-from-server
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: serverservice
      ports:
      - protocol: TCP
        port: 3306
